Added swish command Modified nowplaying functions Made permissions apply role permissions before user permissions

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ config/options.ini
 config/permissions.ini
 config/autoplaylist.txt
 config/autoplaylist_removed.txt
+config/playlist_with_names.txt
+config/swish.log
+config/_autoplaylist.txt
