--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "files.eol": "\n",
     "python.unitTest.unittestArgs": [
         "-v",
         "-s",
@@ -6,6 +7,6 @@
         "-p",
         "test_*.py"
     ],
-    "python.unitTest.unittestEnabled": true,
-    "files.eol": "\n"
+    "python.unitTest.unittestEnabled": true
+    
 }
